objects/Brokerage_and_Consultant1__c.object
<CustomObject>
    <description>Brokerage and Consultant object for Opportunity</description>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Brokerage_and_Consultant11_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrokName__c</fullName>
        <formula>Brokerage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrokName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Role__c</fullName>
        <label>Broker Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Writing Agent</fullName>
                </value>
                <value>
                    <fullName>Account Exec</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Broker of Record</fullName>
                </value>
                <value>
                    <fullName>Co Broker</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Soliciting Broker</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Service Rep</fullName>
                </value>
                <value>
                    <fullName>Former Broker</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Tax_ID__c</fullName>
        <formula>Consultant__r.Contact__r.Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerageAndConsultant__c</fullName>
        <label>Brokerage/Consultant</label>
        <summaryForeignKey>Broker_Consultant_Commissions1__c.BrokerageAndConsultant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Brokerage_Address__c</fullName>
        <formula>Brokerage__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokerage Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_City__c</fullName>
        <formula>Brokerage__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokerage City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Consultant__c</fullName>
        <formula>Brokerage__c &amp; Consultant__c &amp; Text(Opportunity__r.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokerage&amp;Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brokerage Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brokerage_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brokerage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brokerage_Role__c</fullName>
        <label>Brokerage Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Co-Broker</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>General Agency</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Soliciting Broker</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Broker of Record</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Former Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brokerage_State__c</fullName>
        <formula>Brokerage__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokerage State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Zip_Code__c</fullName>
        <formula>Brokerage__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokerage Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brokerage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>LG Brokerage, LG Self Relationship</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Brokerage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brokerage_of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is the Brokerage of Record for this Account</inlineHelpText>
        <label>BOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissions_Paid_to_Agent_or_Agency__c</fullName>
        <label>Commissions Paid to Agent or Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsultantEffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConsultantEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant_Email__c</fullName>
        <description>Consultant__r.Email</description>
        <formula>Consultant__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant_Inactive__c</fullName>
        <formula>TODAY() &gt; ConsultantEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <description>Consultant__r.Contact__r.FirstName &amp;&quot; &quot;&amp; Consultant__r.Contact__r.LastName</description>
        <formula>Consultant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Consultant of Record for the Account</inlineHelpText>
        <label>Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Phone__c</fullName>
        <description>Consultant__r.Phone</description>
        <formula>Consultant__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Title__c</fullName>
        <description>Consultant__r.Title</description>
        <formula>Consultant__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Consultant must be a Contact on the selected Brokerage.</inlineHelpText>
        <label>Consultant</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 4) AND 3</booleanFilter>
            <errorMessage>Please select an Active Consultant from the specified Brokerage Account.</errorMessage>
            <filterItems>
                <field>ContactRelationship__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Brokerage__c</valueField>
            </filterItems>
            <filterItems>
                <field>ContactRelationship__c.CONTCANCEL__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>ContactRelationship__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>LG_Brokerage_Consultant_Relationship</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>API User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipLabel>Brokerage and Consultant</relationshipLabel>
        <relationshipName>Brokerage_and_Consultant1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant_of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Consultant of Record for the Account</inlineHelpText>
        <label>COR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Specialty_Group_Ranking__c</fullName>
        <formula>Brokerage__r.CurrentSpecialtyGroupRanking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Specialty Group Ranking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELBAC__c</fullName>
        <formula>Brokerage__r.ELBAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ELBAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos; &apos; + LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>FMLA</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Expatriate</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineofBusiness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line of Business</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Group__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Group__c</referenceTo>
        <relationshipName>Brokerage_and_Consultant1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Brokerage_Ranking__c</fullName>
        <label>Medical Brokerage Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPN__c</fullName>
        <formula>Brokerage__r.National_Producer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_Consultant__c</fullName>
        <description>Contains the name of the Consultant for reporting purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name Of Consultant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Brokerage__c</fullName>
        <description>Contains the name of the Brokerage for reporting purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Brokerage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Brokerage_and_Consultant11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_Broker_Program__c</fullName>
        <formula>Text( Brokerage__r.SpecialtyBrokerProgram__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty Broker Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID_For_Commission_Payment__c</fullName>
        <formula>IF( ISPICKVAL( Commissions_Paid_to_Agent_or_Agency__c ,&apos;Agent&apos;) ,  Broker_Tax_ID__c ,  IF(ISPICKVAL( Commissions_Paid_to_Agent_or_Agency__c ,&apos;Agency&apos;),  Tax_ID__c , NULL) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax ID For Commission Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <formula>Brokerage__r.Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_Broker_Number__c</fullName>
        <formula>IF( ISPICKVAL(Brokerage_Role__c, &apos;General Agency&apos;), Brokerage__r.GABrokerNumber__c, Brokerage__r.WGSBrokerNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WGS Broker Number</label>
        <type>Text</type>
    </fields>
    <label>Brokerage and Consultant</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage and Consultant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ANA_VR_BRKConsultant01NameChangeError</fullName>
        <active>false</active>
        <description>BW 2015 
Sprint 3</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , (ISCHANGED(Consultant__c)) &amp;&amp; 
( BrokerageAndConsultant__c &gt;= 1))</errorConditionFormula>
        <errorMessage>The Consultant cannot be modified due to an associated Brokerage/Consultant Commission</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BRKConsultant_DifferentAccountError</fullName>
        <active>false</active>
        <errorConditionFormula>(Account__c &lt;&gt; Opportunity__r.AccountId ) &amp;&amp; NOT(ISNULL( Opportunity__c )) &amp;&amp; NOT(ISBLANK( Opportunity__c ))</errorConditionFormula>
        <errorMessage>Please use the same Account that the Opportunity is related to.</errorMessage>
    </validationRules>
</CustomObject>